fixed scroll section mobile responsiveness

--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@
   src: url("./fonts/Roboto.woff2") format("woff2");
 }
 
+@font-face {
+  font-family: Inter;
+  src: url("./fonts/inder.woff2") format("woff2");
+}
+
 @media (min-width: 600px) {
   /*for Desktop*/
   .navbar {
@@ -259,6 +264,7 @@
   scrollbar-color: #dbc4ff #0d1117;
   scrollbar-width: thin;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -376,6 +382,12 @@ body {
   }
 }
 
+@media (min-width: 1260px) {
+  .section {
+    min-width: 1136px;
+  }
+}
+
 .highlights .section.swapped .description {
   order: 2;
   margin-left: 1.5rem;
@@ -446,6 +458,46 @@ body {
 
 /*------------------Container--------------------*/
 
+@media (min-width: 1000px) {
+  /*for desktop*/
+  .section-title{
+    font-size: 2.125rem;
+  }
+  .section {
+    padding: 5rem 0;
+  }
+  .section-list-item{
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1000px) {
+  /*for mobile*/
+  .section-title{
+    font-size: 28px;
+  }
+  .section{
+    flex-direction: column;
+    padding: 2rem 0;
+  }
+  .section-1, .section-3 {
+    flex-direction: column-reverse;
+  }
+  .subgrid-list{
+    margin: 0 !important;
+  }
+  .section-image{
+    width: 100%;
+    margin-bottom: 2rem;
+  }
+  .section-text{
+    font-size: 13px;
+  }
+  .section-list-item{
+    font-size: 11px;
+  }
+}
+
 .scroll-to-container {
   width: 100%;
   max-width: 1200px;
@@ -457,14 +509,13 @@ body {
   flex-direction: column;
   margin-right: auto;
   margin-left: auto;
+  overflow: hidden;
 }
 
 .section {
-  padding: 5rem 0;
   justify-content: center;
   align-items: center;
   display: flex;
-  min-width: 1136px;
   justify-content: space-between !important;
 }
 
@@ -483,145 +534,27 @@ body {
 .section-title {
   font-family: ClashDisplay;
   font-weight: 600;
-  font-size: 2.125rem;
   line-height: 1.2;
   margin-bottom: 1.5rem !important;
+  color: #f0f6fc;
 }
 
 .section-text {
   color: #b1b3b5;
   margin-bottom: 1.5rem;
   font-weight: 500;
+  font-family: inter;
 }
 
 .section-list-item {
   list-style: none;
   font-weight: 500;
-  font-size: 14px;
   margin-bottom: 0.65rem;
 }
 
-/*------------------GRID SECTION--------------------*/
-
-.grid {
-  margin-top: 100px;
-  display: flex;
-  flex-direction: column;
-}
-.subgrid {
-  width: 80%;
-  grid-template-columns: 50% 50%;
-  grid-gap: 50px;
-  place-items: center;
-  height: 500px;
-}
-.text-section {
-  width: 80%;
-  display: grid;
-  margin-right: 200px;
-}
-.subgrid-title {
-  white-space: nowrap;
-  font-family: ClashDisplay;
-  font-weight: 600;
-  font-size: 40px;
-}
-.subgrid-text {
-  color: #b1b3b5;
-  font-weight: 600;
-  margin-bottom: 20px;
-  margin-top: 10px;
-}
-.subgrid-list {
-  list-style: none;
-}
-.subgrid-list-item {
-  list-style: none;
-  font-weight: 500;
-  font-size: 16px;
-}
 .icon-done {
   color: #7f78d2;
   margin-right: 10px;
-}
-.subgrid-image {
-  height: 90%;
-}
-.reverse-image {
-  margin-left: 100px;
-}
-.reverse-text {
-  margin-left: 100px;
-}
-@media (max-width: 1300px) {
-  .grid {
-    grid-template-columns: 99vw;
-    padding-inline: 0vw;
-    grid-gap: 150px;
-  }
-}
-@media (max-width: 1000px) {
-  .subgrid-title {
-    font-size: 25px;
-  }
-  .subgrid-text {
-    font-size: 13px;
-    max-width: 250px;
-  }
-  .subgrid-list-item {
-    font-size: 14px;
-  }
-  .subgrid-list {
-    margin-bottom: 100px;
-    font-size: 14px;
-  }
-  .subgrid-image {
-    height: 40vw;
-  }
-}
-@media (max-width: 800px) {
-  .grid {
-    width: 100%;
-    grid-template-columns: 80vw;
-    padding-inline: 10vw;
-    grid-gap: 30px;
-  }
-  .subgrid {
-    width: 100%;
-    margin-left: 0px;
-    place-items: center;
-    height: auto;
-    grid-template-columns: 80%;
-    grid-template-rows: 40% 50%;
-    grid-gap: 0px;
-    grid-auto-flow: revert;
-  }
-  .text-section {
-    margin: 0px;
-    width: 100%;
-  }
-  .subgrid-title {
-    font-size: 8vw;
-  }
-  .subgrid-text {
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    margin-bottom: 10px;
-  }
-  .subgrid-image {
-    margin: 0px;
-    margin-left: 30%;
-    height: 80vw;
-  }
-  .reverse-image {
-    grid-row-start: 2;
-    grid-row-end: 2;
-  }
-  .reverse-text {
-    grid-row-start: 1;
-    grid-row-end: 1;
-  }
 }
 
 /*--------------------------------------------------*/
